48
================

08/10/23 Refactor out UI mobileapp handling, use server redirects for now #1096
08/10/23 Leave $$ alone in report SQL as Postgres uses it for quoting strings
07/10/23 Set report ID in LinkID when auditing a report being viewed
07/10/23 QueryBuilder: support waiting list reports #1357
06/10/23 Use an overridable sitedef/file to store random names #1356
06/10/23 Use https for future references to deb repository
06/10/23 Trigger mobile app retired page #1096
30/10/23 Add FosterCapacity as an available column to find person #1341
30/10/23 personchooser: Show warning icon if the person has a warning #1339
27/10/23 Advanced find animal: search historic vacc rabies tags #947
27/10/23 person_new: When similar checking, don't require firstname for phone/email
26/10/23 Add <<LocationSite>> wordkey
26/10/23 Verify that imagedata received is a valid image before doing anything
24/10/23 Fix template_valid bug that stopped reminder emails being sent #1322
23/10/23 Automated emails for due payments #1338
22/10/23 Querybuilder: output names instead of IDs on additional animal/person links
22/10/23 Show error for corrupted or incompatible files when attaching media
20/10/23 Fix bug creating reserves from online forms
20/10/23 Applying templates to baby animals, do not adjust overdue to today
17/10/23 Online forms: attach animal attaches to bonded animals too
17/10/23 Redirect to animal media instead of person media after movement doc
16/10/23 Online forms: Use pattern match for shelter/adoptable animal params
16/10/23 When creating reserves from form, reserve to all bonded animals
16/10/23 Similar check: add space to house number to stop 5 matching 50 etc
16/10/23 Add a document button/type to medical tab/book #1336
15/10/23 PetRescue: Show error responses in publishing history slider
13/10/23 Handle decimal commas in PayPal activity CSV files
13/10/23 Bug fix for multiple mergeperson values in an incoming form